posiGen_FullsendBox/src/objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>EU_Projected_Elec_kWh_perYear_Savings__c</fullName>
        <label>EU Projected Electrical kWh/yr Savings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EU_Projected_NG_Therms_PerYear_Savings__c</fullName>
        <label>EU Projected Nat Gas Therms/yr Savings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EU_Projected_Nat_Gas_Savings_yr__c</fullName>
        <label>EU Projected Nat Gas Savings $/yr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EU_Rebate_Amount__c</fullName>
        <label>EU Rebate Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EU_Rebate_Check_Number__c</fullName>
        <inlineHelpText>Enter number on the check which rebates came in</inlineHelpText>
        <label>EU Rebate Check Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EU_Rebate_Received_Date__c</fullName>
        <label>EU Rebate Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EU_Rebate_Submission_Date__c</fullName>
        <label>EU Rebate Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Elect_Acct1__c</fullName>
        <formula>Opportunity__r.Elec_Acct_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elect Acct Num</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Electric_account_number__c</fullName>
        <formula>Opportunity__r.Elec_Acct_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Electric account number copied from the opportunity</inlineHelpText>
        <label>Electric account number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Electrical_Inspection_Completed_Date__c</fullName>
        <label>Electrical Inspection Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Electrical_Inspection_Requested_Date__c</fullName>
        <label>Electrical Inspection Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Electrical_Install_Exception__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Electrical Install Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Electrical_Permit_Application_Age__c</fullName>
        <formula>Electrical_Permit_Received_Date__c  -  Electrical_Permit_Applied_For_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Electrical Permit Application Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Electrical_Permit_Applied_For_Date__c</fullName>
        <label>Electrical Permit Applied For Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Electrical_Permit_Number__c</fullName>
        <label>Electrical Permit Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Electrical_Permit_Received_Date__c</fullName>
        <label>Electrical Permit Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Electrical_Removal_Date__c</fullName>
        <label>Electrical Removal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Electrical_Service_Meter_Photo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Electrical Service/Meter Photo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Electrical_Service_Panel__c</fullName>
        <formula>Text(Opportunity__r.Electrical_Service_Panel__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Electrical Service Panel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Electricity_Provider__c</fullName>
        <formula>Opportunity__r.Electricity_Provider__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Electricity Provider</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engineering_Report_Received_Date__c</fullName>
        <label>Engineering Report Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Engineering_Report_Requested_Date__c</fullName>
        <label>Engineering Report Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Engineering_Required__c</fullName>
        <label>Engineering Required</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Entered_Current_Stage_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <inlineHelpText>Date the Project Entered the Current Stage</inlineHelpText>
        <label>Entered Current Stage Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Equipment_Ordered_Date__c</fullName>
        <label>Equipment Ordered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exceptions_DC__c</fullName>
        <formula>Opportunity__r.Exceptions_DC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exceptions DC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exceptions_EE__c</fullName>
        <formula>Opportunity__r.Exceptions_EE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exceptions EE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exceptions_OPS__c</fullName>
        <formula>Opportunity__r.Exceptions_OPS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exceptions OPS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_Damage_Photo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Existing Damage Photo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Existing_Damage__c</fullName>
        <label>Existing Damage</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_Permitter__c</fullName>
        <description>Specify when permitting process is done by a subcontractor</description>
        <inlineHelpText>Specify the subcontractor responsible for permitting</inlineHelpText>
        <label>External Permitter</label>
        <picklist>
            <picklistValues>
                <fullName>KDH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gulick</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Feasibility_Comments__c</fullName>
        <label>Feasibility Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Field_Tech__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Field Tech</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>Technician</value>
            </filterItems>
            <infoMessage>Enter the field tech name</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Field_Verification_Completed_Date__c</fullName>
        <label>Field Verification Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Field_Verification_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box when a field tech needs to verify the property</description>
        <inlineHelpText>Check this box when a field tech needs to verify the property</inlineHelpText>
        <label>Field Verification Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_Verification_Requested_Date__c</fullName>
        <label>Field Verification Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Field_Verification_Required__c</fullName>
        <label>Field Verification Required</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Field_Verification_Scheduled_Date__c</fullName>
        <label>Field Verification Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_3rd_Party_Inspection_Compete_Date__c</fullName>
        <label>Final 3rd Party Inspection Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Demand_Letter_Sent_Date__c</fullName>
        <label>Final Demand Letter Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_cancellation_date__c</fullName>
        <description>captures the date that the project is completely cancelled.</description>
        <label>Final cancellation date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FolderId__c</fullName>
        <label>FolderId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Front_Cover__c</fullName>
        <defaultValue>false</defaultValue>
        <description>KDH field</description>
        <label>Front Cover</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Full_Address__c</fullName>
        <formula>Opportunity__r.Full_Address_from_UA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gas_account_number__c</fullName>
        <formula>Opportunity__r.Natural_Gas_Acct_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Gas account number</inlineHelpText>
        <label>Gas account number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gquickmap__c</fullName>
        <description>Google Maps field</description>
        <formula>IMAGE(&quot;https://maps.googleapis.com/maps/api/staticmap?center=&quot; +  Street_Address__c  + &quot;,&quot; +  City__c  + &quot;,&quot; +  State__c  + &quot;&amp;zoom=13&amp;size=600x300&amp;markers=color:red|&quot; +  Street_Address__c  + &quot;,&quot; +  City__c  + &quot;,&quot; +  State__c  + &quot;&amp;sensor=false&quot;
, &quot;No map available&quot;, 250, 500)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This should be approximately a map of the house address</inlineHelpText>
        <label>Gquickmap</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gross_System_Cost_in_Dollars__c</fullName>
        <label>Gross System Cost in Dollars</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ground_Rod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>KDH field</description>
        <label>Ground Rod</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HDLC_Approval_Completed_Date__c</fullName>
        <label>HDLC Approval Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HDLC_Approval_Requested_Date__c</fullName>
        <label>HDLC Approval Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HDLC_Approval_Required__c</fullName>
        <formula>Opportunity__r.HDLC_Approval_Required__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HDLC Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HDLC_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is HDLC approval required?</inlineHelpText>
        <label>HDLC Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HOA_Approval_Completed_Date__c</fullName>
        <label>HOA Approval Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HOA_Approval_Requested_Date__c</fullName>
        <label>HOA Approval Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HOA_Approval_Required__c</fullName>
        <formula>Opportunity__r.Are_you_in_a_Homeowner_s_Association__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From the Opportunity record.</inlineHelpText>
        <label>HOA Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSE_Comment__c</fullName>
        <inlineHelpText>Enter any comment related to animals present on site, vehicle moved, locked gate, etc.</inlineHelpText>
        <label>HSE Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Has_Net_Meter__c</fullName>
        <formula>Opportunity__r.Net_Meter_Installed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Net Meter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Heating_Provider1__c</fullName>
        <formula>Opportunity__r.Heating_Provider__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Heating Provider</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>High_Priority__c</fullName>
        <formula>And(IF(Opportunity__r.Pipeline_Stage__c  = &quot;Pending EU&quot;, true,false), If(  TEXT( Opportunity__r.PVI_Net_Meter_Install_Date__c)  &lt;&gt; &quot; &quot;  ,true, false))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Tells us if it is high priority</inlineHelpText>
        <label>High Priority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Home_Front_Photo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Home Front Photo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Home_Heating_Method__c</fullName>
        <formula>TEXT(Opportunity__r.Home_Heating_Method__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Home Heating Method</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_Water_Fuel_Type__c</fullName>
        <formula>TEXT(Opportunity__r.Hot_Water_Heating_Method__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>How Water Fuel Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>I_am_the_EE_Assessor__c</fullName>
        <formula>EE_Assessor__c = $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>I am the EE Assessor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>I_am_the_EE_Installer__c</fullName>
        <formula>TODAY() &gt;   EE_Approved_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DEL I am the EE Installer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Import_ID__c</fullName>
        <label>Import_ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Informed_Net_Meter_Installed_Date__c</fullName>
        <inlineHelpText>This is the date that PG was informed the Net Meter has been installed.</inlineHelpText>
        <label>Informed Net Meter Installed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Informed_Net_Meter_Installed_Source__c</fullName>
        <label>Informed Net Meter Installed Source</label>
        <picklist>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Technician</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Initial_Determination_Result__c</fullName>
        <label>Initial Determination Result</label>
        <picklist>
            <picklistValues>
                <fullName>Feasible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Feasible</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inspection_Age__c</fullName>
        <description>The number of days between the Inspection Requested Date and the Inspection Complete With Letter Date</description>
        <formula>Inspection_Complete_With_Letter_Date__c  - Inspection_Requested_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inspection Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inspection_Complete_With_Letter_Date__c</fullName>
        <inlineHelpText>After the approved inspection letter comes in, this field should be filled in.</inlineHelpText>
        <label>Inspection Complete With Letter Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inspection_Report_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inspection Report Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inspection_Requested_Date__c</fullName>
        <label>Inspection Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inspection_Result__c</fullName>
        <label>Inspection Result</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inspector_Type__c</fullName>
        <label>Inspector Type</label>
        <picklist>
            <picklistValues>
                <fullName>Municipality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd Party</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Install_100_Complete_Date__c</fullName>
        <label>Install 100% Complete Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Install_Pipeline__c</fullName>
        <formula>IF(AND( RecordType.Id = &quot;012d0000000P5sB&quot;,ISBLANK( Building_Permit_Applied_For_Date__c ),ISBLANK( PVI_Placed_In_Service_Date__c ),ISBLANK( PV_Net_Meter_Install_Verified_Date__c ),ISBLANK( Net_Meter_Install_Scheduled_Date__c )),&quot;Waiting to File Permit&quot;,
IF(AND(ISBLANK( Building_Permit_Received_Date__c ),NOT(ISBLANK( Building_Permit_Applied_For_Date__c ))),&quot;Waiting to Receive Permit&quot;,
IF(AND(ISBLANK( PVI_Rails_Scheduled_Date__c ),ISBLANK( PVI_Placed_In_Service_Date__c ),NOT(ISBLANK( Building_Permit_Received_Date__c ))),&quot;Waiting to Schedule R&amp;P Install&quot;,
IF(AND( PVI_Rails_Scheduled_Date__c &gt;= (TODAY()+1),  NOT(ISBLANK( PVI_Rails_Scheduled_Date__c )),ISBLANK( PVI_Rails_Installed_Date__c )),&quot;R&amp;P Install Scheduled&quot;,
IF(AND( NOT(ISBLANK( PVI_Rails_Installed_Date__c )),ISBLANK( PVI_Electrical_Scheduled_Date__c )),&quot;Waiting For Electrical to be Scheduled&quot;,
IF(AND( PVI_Electrical_Scheduled_Date__c  &gt;= (TODAY()+1),  ISBLANK( PVI_Electrical_Installed_Date__c ) , Not(ISBLANK( PVI_Electrical_Scheduled_Date__c ))),&quot;Electrical Has Been Scheduled&quot;,&quot;ERROR&quot;))))))</formula>
        <label>Install Pipeline</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Return_Comment__c</fullName>
        <label>Install Return Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Install_Return_Date__c</fullName>
        <label>Install Return Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Install_Return_Reason__c</fullName>
        <label>Install Return Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Bad roof</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad weather</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cannot complete install</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer not home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer rescheduled install</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing / Inadequate components</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time constraints</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong layout</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interior_Panel__c</fullName>
        <description>KDH field</description>
        <label>Interior Panel</label>
        <picklist>
            <picklistValues>
                <fullName>&lt; 5 feet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt; 5 feet</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inverter_Manufacturer__c</fullName>
        <description>Picklist for the inverter manufacturers</description>
        <label>Inverter Manufacturer</label>
        <picklist>
            <picklistValues>
                <fullName>Enphase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power One</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar Edge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kaco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar Bridge</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inverter_Type__c</fullName>
        <label>Inverter Type</label>
        <picklist>
            <picklistValues>
                <fullName>String</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsCash__c</fullName>
        <formula>ISPICKVAL(Opportunity__r.Transaction_Type__c , &quot;Cash&quot;)</formula>
        <inlineHelpText>Lets you know if the sale was in cash</inlineHelpText>
        <label>IsCash</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>January_Modeled_Energy__c</fullName>
        <label>Modeled Energy - January</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Kickoff__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Kickoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ladder_Needed__c</fullName>
        <formula>Opportunity__r.Property__r.Ladder_Needed_for_Service_Calls__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ladder Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ladder_Setup_Photo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ladder Setup Photo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Annual_Submission__c</fullName>
        <label>Last Annual Submission</label>
        <picklist>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Layout_Approval_Received_Date__c</fullName>
        <label>Layout Approval Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Layout_Approval_Submitted_Date__c</fullName>
        <label>Layout Approval Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Letter_Type__c</fullName>
        <label>Letter Type</label>
        <picklist>
            <picklistValues>
                <fullName>1.	Pre-EA Cannot reach after three attempts- provide 15 days to respond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.	Pre-EA Renovations in progress or walls missing etc. – provide 60 days to complete renovations or fixes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.	Post EA House not weatherization read-  provide 60 days to complete renovations or fixes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.	Post EA Health and Safety concerns need to be satisfied- 30 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.	Post EA Cannot get a hold of- 15 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. MVR good shape, Not cost effective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. EE declined waiver</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Locked_Gate__c</fullName>
        <label>Locked Gate</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Locus_PTO_Date__c</fullName>
        <description>Format the PVI Placed In Service Date value for use as the Locus PTO Date.</description>
        <formula>LEFT( TEXT( YEAR( PVI_Placed_In_Service_Date__c ) ) &amp; &quot;-&quot; &amp; LPAD( TEXT( MONTH( PVI_Placed_In_Service_Date__c ) ), 2, &apos;0&apos; ) &amp; &quot;-&quot; 
&amp; LPAD( TEXT( DAY( PVI_Placed_In_Service_Date__c ) ), 2, &apos;0&apos; ), 10 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Locus PTO Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Low_income_funding__c</fullName>
        <description>Low income funding sources</description>
        <inlineHelpText>Enter funding source for low-income</inlineHelpText>
        <label>Low income funding</label>
        <picklist>
            <picklistValues>
                <fullName>Municipal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Marked_Completed_On_Date__c</fullName>
        <label>Marked Completed On Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Materials_used__c</fullName>
        <inlineHelpText>Total cost of materials used</inlineHelpText>
        <label>Materials used</label>
        <summarizedField>Defect__c.Violation_severity__c</summarizedField>
        <summaryForeignKey>Defect__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Max_Milestone_Complete_Date__c</fullName>
        <label>Max Milestone Complete Date</label>
        <summarizedField>Milestone__c.Actual_Complete_Date__c</summarizedField>
        <summaryForeignKey>Milestone__c.Project__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Mechanical_Installed_Date__c</fullName>
        <label>Plumbing / Mechanical Installed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mechanical_Permit_Applied_For_Date__c</fullName>
        <label>Mechanical Permit Applied For Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mechanical_Permit_Number__c</fullName>
        <label>Mechanical Permit Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mechanical_Permit_Received_Date__c</fullName>
        <label>Mechanical Permit Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mechanical_Scheduled_Date__c</fullName>
        <label>Plumbing / Mechanical Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Missing_Assessment_Required_Fields__c</fullName>
        <formula>IF( ISBLANK( PV_Scheduled_Start_Date__c ), 1, 0 ) + IF( ISBLANK( System_Size_kW__c ), 1, 0 ) + IF( ISBLANK( TEXT( Result__c )), 1, 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Missing Assessment Required Fields</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Missing_Install_Required_Fields__c</fullName>
        <formula>IF( ISBLANK( Building_Permit_Applied_For_Date__c ), 1, 0 ) + IF( ISBLANK(  Building_Permit_Number__c  ), 1, 0 ) + IF( ISBLANK(  Building_Permit_Received_Date__c  ), 1, 0 ) + IF( ISBLANK(   Electrical_Permit_Applied_For_Date__c   ), 1, 0 ) + IF( ISBLANK( PVI_Rails_Installed_Date__c   ), 1, 0 ) + IF( ISBLANK( PVI_Electrical_Installed_Date__c ), 1, 0 ) + IF( ISBLANK( PVI_Placed_In_Service_Date__c ), 1, 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Missing Install Required Fields</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Missing_Post_Install_Required_Fields__c</fullName>
        <formula>IF(ISBLANK( TEXT( Inspector_Type__c  )), 1, 0 ) + IF( ISBLANK( Inspection_Requested_Date__c  ), 1, 0 ) + IF( Inspection_Report_Received__c   = FALSE , 1, 0 ) + IF( ISBLANK( Inspection_Complete_With_Letter_Date__c  ), 1, 0 ) + IF( ISBLANK( Final_3rd_Party_Inspection_Compete_Date__c ), 1, 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Missing Post Install Required Fields</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Modeled_Annual_Therms_Savings__c</fullName>
        <description>Modeled therms saved</description>
        <inlineHelpText>Enter modeled therms saved</inlineHelpText>
        <label>Modeled annual therms kWh equiv. savings</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Modeled_Annual_kWh_Savings__c</fullName>
        <description>Modeled kWh savings from modeling system.</description>
        <inlineHelpText>Enter the modeled saving of kWh</inlineHelpText>
        <label>Modeled Annual kWh Savings</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Modeled_BTUs__c</fullName>
        <description>Modeled btus saved</description>
        <inlineHelpText>Enter modeled btu&apos;s saved</inlineHelpText>
        <label>Modeled BTUs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Modeled_Energy_April__c</fullName>
        <label>Modeled Energy - April</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Modeled_Energy_August__c</fullName>
        <label>Modeled Energy - August</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Modeled_Energy_Data_Entered_By__c</fullName>
        <inlineHelpText>Name of user who entered the data</inlineHelpText>
        <label>Modeled Energy Data Entered By</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modeled_Energy_Data_Entered_Date__c</fullName>
        <inlineHelpText>Date when modeled energy data is entered</inlineHelpText>
        <label>Modeled Energy Data Entered Date</label>
        <type>Date</type>
    </fields>
</CustomObject>